 ~ Map source change: Emapi.pl replaces Emapa.pl
 + New atlas format: PathAway
 ! Alpha transparency problem with multi-layer maps        
 + New atlas format: AFTrack (OSZ)
 ~ CacheBox layer name uses now the map source name
 + New atlas format: AlpineQuestMap (AQM)
 + New atlas format: Ublox
 ! Fixed OSM Hiking relief
 + New map source: Cykloatlas with relief

 1.7: (2010-02-05)
 ~ Project has been renamed to "Mobile Atlas Creator" taking account that
    besides TrekBuddy a large number of atlas and map formats are supported
    and for ending the mix-up of "TrekBuddy" and "TrekBuddy Atlas Creator" 
 ~ Tiles tore now uses database (BerkelyDB) instead of tile files in file 
    system
 + Old tiles saved in the tile store are checked and updated when used 
    (displayed in map view or used in an atlas). Updating is done via 
    expiration settings - those provided by the server or otherwise user 
    specified.   
 + Atlas output directory can be specified via settings dialog
 + AndNav and OSMTracker: Tile format conversion (JPG <->PNG) implemented
    including color reduction
 ~ Docelu.pl can update it's base URL like the Google map sources do
 ~ Pause/resume button now works while map creation (not only while download)
 + New experimental map source: Turaterkep (Hungary hiking)
    Uses tiles of size 512x512 (not supported by all atlas formats)        
 + Multi-layer map sources such as Google Hybrid or OSM Hiking with relief 
    background can be used with all atlas creators
 + New map: NearMap Australia (high-resolution aerial images for Australia)
 ! GPX addWpt: Multiple way points added by one mouse click fixed
 ! Start.sh/Start.cmd Java max heap setting was ignored by Java because of 
    the position at the end of the command line   
 ! #2904937 and #2905182 1px map calibration bug
 + New map source: Humbermedia Bavaria 
 + New atlas format: Mobile Trail Explorer Cache (writes single MTECache file
    per atlas)